feat(event): subscriber items 2016-03

--- a/common/locales/en/gear.json
+++ b/common/locales/en/gear.json
@@ -398,6 +398,8 @@
   "armorMystery201511Notes": "Considering this armor was carved directly from a magical log, it's surprisingly comfortable. Confers no benefit. November 2015 Subscriber Item.",
   "armorMystery201512Text": "Cold Fire Armor",
   "armorMystery201512Notes": "Summon the icy flames of winter! Confers no benefit. December 2015 Subscriber Item.",
+  "armorMystery201603Text": "Lucky Suit",
+  "armorMystery201603Notes": "This suit is sewn from thousands of four-leafed clovers! Confers no benefit. March 2016 Subscriber Item.",
   "armorMystery301404Text": "Steampunk Suit",
   "armorMystery301404Notes": "Dapper and dashing, wot! Confers no benefit. February 3015 Subscriber Item.",
 
@@ -615,6 +617,8 @@
   "headMystery201601Notes": "Stay resolute, brave champion! Confers no benefit. January 2016 Subscriber Item.",
   "headMystery201602Text": "Heartbreaker Hood",
   "headMystery201602Notes": "Shield your identity from all your admirers. Confers no benefit. February 2016 Subscriber Item.",
+  "headMystery201603Text": "Lucky Hat",
+  "headMystery201603Notes": "This top hat is a magical good-luck charm. Confers no benefit. March 2016 Subscriber Item.",
   "headMystery301404Text": "Fancy Top Hat",
   "headMystery301404Notes": "A fancy top hat for the finest of gentlefolk! January 3015 Subscriber Item. Confers no benefit.",
   "headMystery301405Text": "Basic Top Hat",
